# Isobaths

./: .gitignore  .pre-commit-config.yaml  README.md  gebco.isobaths.py  isobaths.py  mkGeoPandaFrames.py  mkLevels.py  noaa.isobaths.py  palau.mat.2.nc.py  pruneData.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_isobaths.py  vietnam
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/data/: etopo_monterey_subset.nc  gebco_vietnam_subset.nc
