# Tool configuration only -- Isobaths is a set of scripts, not an installable
# package, so there is no [build-system] or [project] table here.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# A pragmatic "more than minimal" set:
#   E/W  pycodestyle      F  pyflakes        I  isort
#   UP   pyupgrade        B  flake8-bugbear  C4 comprehensions   SIM simplify
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
# Treat the local helper modules as first-party so imports group sensibly.
known-first-party = ["isobaths", "mkLevels", "pruneData", "mkGeoPandaFrames"]

[tool.pytest.ini_options]
testpaths = ["test_isobaths.py"]
filterwarnings = [
    # Comparing contour lengths in degrees for equality is intentional here.
    "ignore:Geometry is in a geographic CRS:UserWarning",
    # Upstream netcdf4 1.7.x / numpy 2.5 binary-compat chatter, not our code.
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]
